--- a/src/schooltool/gradebook/locales/nl.po
+++ b/src/schooltool/gradebook/locales/nl.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-03-16 18:31+0200\n"
-"PO-Revision-Date: 2012-03-17 10:23+0000\n"
+"POT-Creation-Date: 2012-04-18 17:14+0300\n"
+"PO-Revision-Date: 2012-04-18 17:21+0000\n"
 "Last-Translator: rob <linuxned@gmail.com>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-03-18 05:02+0000\n"
-"X-Generator: Launchpad (build 14951)\n"
+"X-Launchpad-Export-Date: 2012-04-19 04:58+0000\n"
+"X-Generator: Launchpad (build 15108)\n"
 "Language: nl\n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -517,7 +517,7 @@ msgstr "-- Hele jaar --"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:308
 msgid "Worksheets for ${year}"
-msgstr "Werkbladen voor ${year}"
+msgstr "Werkbladen van ${year}"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:329
 #: /src/schooltool/gradebook/browser/report_card.py:290
@@ -526,7 +526,7 @@ msgstr "-- Selecteer een sjabloon --"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:366
 msgid "Hide/unhide Deployed Worksheets for ${year}"
-msgstr "Toegepaste werkbladen voor ${year} tonen/verbergen"
+msgstr "Toegepaste werkbladen van ${year} tonen/verbergen"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:88
 #: /src/schooltool/gradebook/browser/flourish.zcml:601
@@ -704,8 +704,33 @@ msgstr ""
 "Toont alle leerlingen met een onvoldoende in de geselecteerde "
 "rapportactiviteit en termijn."
 
-#: /src/schooltool/gradebook/browser/flourish.zcml:806
-#: /src/schooltool/gradebook/browser/pdf_views.py:685
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+msgid ""
+"Export report card data for every student in every section for the term."
+msgstr ""
+"Rapportkaartgegevens exporteren voor elke leerling in elke sectie van deze "
+"termijn."
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid "Report Sheets"
+msgstr "Rapportbladen"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid ""
+"Export report card data for every student in every section for the school. "
+"There will be one worksheet for each term in the year."
+msgstr ""
+"Rapportkaartgegevens exporteren voor elke leerling in elke sectie van de "
+"school. Er zal één werkblad voor elke termijn in dat jaar zijn."
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+#: /src/schooltool/gradebook/browser/report.zcml:63
+msgid "School Year"
+msgstr "Schooljaar"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:931
+#: /src/schooltool/gradebook/browser/pdf_views.py:724
 msgid "Absences"
 msgstr "Absenties"
 
@@ -757,14 +782,14 @@ msgstr "Afdrukbaar werkblad"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1139
 msgid "The current worksheet formatted for printing."
-msgstr "Huidige werkblad geformateerd om af te drukken."
+msgstr "Huidige werkblad geformatteerd om af te drukken."
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1151
 msgid ""
 "A single Excel-formatted spreadsheet containing all the worksheets for this "
 "gradebook."
 msgstr ""
-"Eén enkel Excel-geformateerde spreadsheet met alle werkbladen voor deze "
+"Eén enkel Excel-geformatteerd werkblad met alle werkbladen van deze "
 "cijferlijst."
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1151
@@ -995,10 +1020,6 @@ msgstr "Absenties per dag"
 msgid "Lists students absent on a given day."
 msgstr "Toont absentie van leerling op een bepaalde datum."
 
-#: /src/schooltool/gradebook/browser/report.zcml:63
-msgid "School Year"
-msgstr "Schooljaar"
-
 #: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr "Absenties per sectie"
@@ -1021,11 +1042,11 @@ msgstr "T"
 
 #: /src/schooltool/gradebook/browser/report_card.py:254
 msgid "Report Sheets for ${year}"
-msgstr "Rapportblad voor ${year}"
+msgstr "Rapportblad van ${year}"
 
 #: /src/schooltool/gradebook/browser/report_card.py:399
 msgid "Hide/unhide Report Sheets for ${year}"
-msgstr "Rapportbladen tonen/verbergen voor ${year}"
+msgstr "Rapportbladen van ${year} tonen/verbergen"
 
 #: /src/schooltool/gradebook/browser/report_card.py:461
 msgid "Report Sheet Template Details"
@@ -1053,27 +1074,27 @@ msgstr "Scoresysteem"
 msgid "Choose an existing score system or use range below"
 msgstr "Selecteer een bestaand scoresysteem of gebruik bereik hieronder"
 
-#: /src/schooltool/gradebook/browser/report_card.py:410
+#: /src/schooltool/gradebook/browser/report_card.py:574
 #: /src/schooltool/requirement/browser/scoresystem.py:235
 #: /src/schooltool/requirement/interfaces.py:151
-msgid "Minimum"
-msgstr "Minimum"
-
-#: /src/schooltool/gradebook/browser/report_card.py:411
-msgid "Lowest integer score value possible"
-msgstr "Laagste scoregetal mogelijk"
-
-#: /src/schooltool/gradebook/browser/report_card.py:416
-#: /src/schooltool/requirement/browser/scoresystem.py:235
-#: /src/schooltool/requirement/interfaces.py:157
 msgid "Maximum"
 msgstr "Maximum"
 
-#: /src/schooltool/gradebook/browser/report_card.py:417
+#: /src/schooltool/gradebook/browser/report_card.py:575
 msgid "Highest integer score value possible"
 msgstr "Hoogste scoregetal mogelijk"
 
-#: /src/schooltool/gradebook/browser/report_card.py:485
+#: /src/schooltool/gradebook/browser/report_card.py:580
+#: /src/schooltool/requirement/browser/scoresystem.py:235
+#: /src/schooltool/requirement/interfaces.py:157
+msgid "Minimum"
+msgstr "Minimum"
+
+#: /src/schooltool/gradebook/browser/report_card.py:581
+msgid "Lowest integer score value possible"
+msgstr "Laagste scoregetal mogelijk"
+
+#: /src/schooltool/gradebook/browser/report_card.py:649
 msgid "Add new report activity"
 msgstr "Nieuwe rapportactiviteit toevoegen."
 
@@ -1094,7 +1115,7 @@ msgstr "Toepassen"
 #: /src/schooltool/gradebook/browser/report_card.py:1089
 #: /src/schooltool/gradebook/browser/report_card.py:1229
 msgid "Report Card Layout for ${year}"
-msgstr "Rapportkaartindeling voor ${year}"
+msgstr "Rapportkaartindeling van ${year}"
 
 #: /src/schooltool/gradebook/browser/report_card.py:1190
 msgid "Grid Column Details"
@@ -1683,7 +1704,7 @@ msgid ""
 "defined outline items laid out like a text outline. This is necessary for "
 "comments or other scores that will not fit in a traditional grid."
 msgstr ""
-"Onder het raster is een overzicht voor elke sectie, waar de ingestelde "
+"Onder het raster is een overzicht van elke sectie, waar de ingestelde "
 "overzichtsitems ingedeeld zijn als bij een tekstoverzicht. Dit wordt "
 "gebruikt voor commentaren en andere scores die niet passen in het raster."
 
@@ -2275,7 +2296,7 @@ msgstr "Sjablonen bewerken"
 
 #: /src/schooltool/gradebook/security.zcml:17
 msgid "Create and edit gradebook data for a section."
-msgstr "Cijferlijstgegevens aanmaken en bewerken voor een sectie."
+msgstr "Cijferlijstgegevens van een sectie aanmaken en bewerken."
 
 #: /src/schooltool/gradebook/security.zcml:17
 msgid "Edit Gradebook"
@@ -2287,7 +2308,7 @@ msgstr "Cijferlijst bekijken"
 
 #: /src/schooltool/gradebook/security.zcml:24
 msgid "View gradebook data for a section."
-msgstr "Cijferlijstgegevens bekijken voor een sectie."
+msgstr "Cijferlijstgegevens van een sectie bekijken."
 
 #: /src/schooltool/gradebook/security.zcml:33
 msgid "Only the instructor of a section can edit its gradebook."
