--- a/src/schooltool/gradebook/locales/pt.po
+++ b/src/schooltool/gradebook/locales/pt.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-03-16 18:31+0200\n"
-"PO-Revision-Date: 2012-03-15 20:14+0000\n"
-"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
+"POT-Creation-Date: 2012-04-18 17:14+0300\n"
+"PO-Revision-Date: 2012-04-25 13:21+0000\n"
+"Last-Translator: Sylver_51 <Sylver_51@yahoo.com.br>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-03-17 05:17+0000\n"
-"X-Generator: Launchpad (build 14951)\n"
+"X-Launchpad-Export-Date: 2012-04-26 05:04+0000\n"
+"X-Generator: Launchpad (build 15149)\n"
 "Language: pt\n"
 "X-Rosetta-Version: 0.1\n"
 
@@ -135,7 +135,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/activity.py:339
 #: /src/schooltool/gradebook/interfaces.py:133
 msgid "Due Date"
-msgstr ""
+msgstr "Data de Entrega"
 
 #: /src/schooltool/gradebook/browser/activity.py:343
 #: /src/schooltool/gradebook/browser/templates/f_request_absences_by_day.pt:20
@@ -162,6 +162,10 @@ msgid ""
 "when calculating averages.  The list of categories can be set schoolwide set "
 "by your system administrator."
 msgstr ""
+"As categorias podem ser utilizadas para destinguir diferentes tipos de "
+"actividades de forma diferente quando se calculam medias. A lista de "
+"categorias pode ser definida para toda a escola pelo administrador do "
+"sistema."
 
 #: /src/schooltool/gradebook/browser/activity.py:356
 #: /src/schooltool/gradebook/browser/activity.py:467
@@ -172,10 +176,12 @@ msgstr ""
 msgid ""
 "This value must be an integer.  You may award extra credit above this value."
 msgstr ""
+"Este valor tem de ser do tipo inteiro. Poderá atribuir creditos extra acima "
+"deste valor."
 
 #: /src/schooltool/gradebook/browser/activity.py:363
 msgid "Minimum Score"
-msgstr ""
+msgstr "Pontuação mínima"
 
 #: /src/schooltool/gradebook/browser/activity.py:364
 msgid "This value must be an integer."
@@ -206,7 +212,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/activity.py:402
 msgid "Add an External Activity"
-msgstr ""
+msgstr "Adicionar uma Actividade Externa"
 
 #: /src/schooltool/gradebook/browser/activity.py:458
 msgid "External Score Source"
@@ -217,6 +223,8 @@ msgid ""
 "The point value of this activity will be calculated as the full credit score "
 "multiplied by the percentage value of the external score."
 msgstr ""
+"A pontuação desta actividade será calculada com base na pontuação total de "
+"creditos multiplicada pela percentagem da pontuação externa."
 
 #: /src/schooltool/gradebook/browser/activity.py:480
 #: /src/schooltool/gradebook/browser/activity.py:589
@@ -693,8 +701,29 @@ msgid ""
 "and term."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/flourish.zcml:806
-#: /src/schooltool/gradebook/browser/pdf_views.py:685
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+msgid ""
+"Export report card data for every student in every section for the term."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid "Report Sheets"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid ""
+"Export report card data for every student in every section for the school .  "
+"                   There will be one worksheet for each term in the year."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+#: /src/schooltool/gradebook/browser/report.zcml:63
+msgid "School Year"
+msgstr "Ano Escolar"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:931
+#: /src/schooltool/gradebook/browser/pdf_views.py:724
 msgid "Absences"
 msgstr ""
 
@@ -977,10 +1006,6 @@ msgstr ""
 msgid "Lists students absent on a given day."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:63
-msgid "School Year"
-msgstr "Ano Escolar"
-
 #: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr ""
@@ -1035,27 +1060,27 @@ msgstr ""
 msgid "Choose an existing score system or use range below"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:410
+#: /src/schooltool/gradebook/browser/report_card.py:574
 #: /src/schooltool/requirement/browser/scoresystem.py:235
 #: /src/schooltool/requirement/interfaces.py:151
-msgid "Minimum"
-msgstr ""
-
-#: /src/schooltool/gradebook/browser/report_card.py:411
-msgid "Lowest integer score value possible"
-msgstr ""
-
-#: /src/schooltool/gradebook/browser/report_card.py:416
-#: /src/schooltool/requirement/browser/scoresystem.py:235
-#: /src/schooltool/requirement/interfaces.py:157
 msgid "Maximum"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:417
+#: /src/schooltool/gradebook/browser/report_card.py:575
 msgid "Highest integer score value possible"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:485
+#: /src/schooltool/gradebook/browser/report_card.py:580
+#: /src/schooltool/requirement/browser/scoresystem.py:235
+#: /src/schooltool/requirement/interfaces.py:157
+msgid "Minimum"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/report_card.py:581
+msgid "Lowest integer score value possible"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/report_card.py:649
 msgid "Add new report activity"
 msgstr ""
 
