--- a/src/schooltool/gradebook/locales/ru.po
+++ b/src/schooltool/gradebook/locales/ru.po
@@ -7,27 +7,27 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-03-16 18:31+0200\n"
-"PO-Revision-Date: 2012-03-15 20:13+0000\n"
-"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
+"POT-Creation-Date: 2012-04-18 17:14+0300\n"
+"PO-Revision-Date: 2012-06-13 18:48+0000\n"
+"Last-Translator: Eugene Marshal <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-03-17 05:17+0000\n"
-"X-Generator: Launchpad (build 14951)\n"
+"X-Launchpad-Export-Date: 2012-06-14 04:50+0000\n"
+"X-Generator: Launchpad (build 15405)\n"
 "Language: ru\n"
 "X-Rosetta-Version: 0.1\n"
 
 #: /src/schooltool/gradebook/activity.py:52
 msgid "Sheet1"
-msgstr ""
+msgstr "Лист1"
 
 #: /src/schooltool/gradebook/activity.py:239
 #: /src/schooltool/gradebook/browser/templates/worksheet_overview.pt:8
 #: /src/schooltool/gradebook/interfaces.py:218
 msgid "Activities"
-msgstr ""
+msgstr "Занятия"
 
 #: /src/schooltool/gradebook/activity.py:301
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit.pt:5
@@ -42,19 +42,19 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/gradebook.py:83
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:74
 msgid "Summary"
-msgstr ""
+msgstr "Сводка"
 
 #: /src/schooltool/gradebook/browser/activity.py:71
 msgid "External Activity"
-msgstr ""
+msgstr "Дополнительные занятия"
 
 #: /src/schooltool/gradebook/browser/activity.py:72
 msgid "The external activity"
-msgstr ""
+msgstr "Дополнительные занятия"
 
 #: /src/schooltool/gradebook/browser/activity.py:277
 msgid "Add new activity"
-msgstr ""
+msgstr "Добавить новое занятие"
 
 #: /src/schooltool/gradebook/browser/activity.py:290
 #: /src/schooltool/gradebook/browser/activity.py:415
@@ -126,11 +126,11 @@ msgstr "Заголовок"
 
 #: /src/schooltool/gradebook/browser/activity.py:334
 msgid "Column Label"
-msgstr ""
+msgstr "Название столбца"
 
 #: /src/schooltool/gradebook/browser/activity.py:335
 msgid "Limit to 5 characters or less."
-msgstr ""
+msgstr "Ограничить до 5 символов или менее."
 
 #: /src/schooltool/gradebook/browser/activity.py:339
 #: /src/schooltool/gradebook/interfaces.py:133
@@ -184,7 +184,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/activity.py:385
 #: /src/schooltool/gradebook/browser/activity.py:536
 msgid "Activity Details"
-msgstr ""
+msgstr "Сведения о занятии"
 
 #: /src/schooltool/gradebook/browser/activity.py:389
 #: /src/schooltool/gradebook/browser/activity.py:486
@@ -206,7 +206,7 @@ msgstr "Подтвердить"
 
 #: /src/schooltool/gradebook/browser/activity.py:402
 msgid "Add an External Activity"
-msgstr ""
+msgstr "Добавить дополнительные занятия"
 
 #: /src/schooltool/gradebook/browser/activity.py:458
 msgid "External Score Source"
@@ -230,7 +230,7 @@ msgstr "Изменить информацию о ${fullname}"
 
 #: /src/schooltool/gradebook/browser/activity.py:558
 msgid "Edit External Activity"
-msgstr ""
+msgstr "Изменить дополнительные занятия"
 
 #: /src/schooltool/gradebook/browser/activity.py:618
 msgid "Category weights for worksheet ${worksheet}"
@@ -246,7 +246,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/activity.py:704
 msgid "The external activity couldn't be found"
-msgstr ""
+msgstr "Дополнительные занятия не найдены"
 
 #: /src/schooltool/gradebook/browser/activity.py:856
 #: /src/schooltool/gradebook/browser/activity.py:938
@@ -270,7 +270,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/f_student_gradebook.pt:5
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:80
 msgid "Activity"
-msgstr ""
+msgstr "Занятие"
 
 #: /src/schooltool/gradebook/browser/activity.py:1033
 msgid "Linked Column"
@@ -465,7 +465,7 @@ msgstr "Параметры"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:426
 msgid "Download PDF"
-msgstr ""
+msgstr "Сохранить в формате PDF"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:435
 msgid "Update Grades"
@@ -515,7 +515,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/course_worksheets.py:329
 #: /src/schooltool/gradebook/browser/report_card.py:290
 msgid "-- Select a template --"
-msgstr ""
+msgstr "-- Выберите шаблон --"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:366
 msgid "Hide/unhide Deployed Worksheets for ${year}"
@@ -579,7 +579,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:269
 msgid "Edit Activity"
-msgstr ""
+msgstr "Свойства занятия"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:297
 msgid "Edit External Score"
@@ -617,7 +617,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:482
 msgid "New Template"
-msgstr ""
+msgstr "Новый шаблон"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:538
 msgid "Action"
@@ -693,8 +693,29 @@ msgid ""
 "and term."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/flourish.zcml:806
-#: /src/schooltool/gradebook/browser/pdf_views.py:685
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+msgid ""
+"Export report card data for every student in every section for the term."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:864
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid "Report Sheets"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+msgid ""
+"Export report card data for every student in every section for the school .  "
+"                   There will be one worksheet for each term in the year."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:890
+#: /src/schooltool/gradebook/browser/report.zcml:63
+msgid "School Year"
+msgstr "Учебный год"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:931
+#: /src/schooltool/gradebook/browser/pdf_views.py:724
 msgid "Absences"
 msgstr "Пропуски"
 
@@ -975,10 +996,6 @@ msgstr ""
 msgid "Lists students absent on a given day."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:63
-msgid "School Year"
-msgstr "Учебный год"
-
 #: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr ""
@@ -1033,27 +1050,27 @@ msgstr ""
 msgid "Choose an existing score system or use range below"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:410
+#: /src/schooltool/gradebook/browser/report_card.py:574
 #: /src/schooltool/requirement/browser/scoresystem.py:235
 #: /src/schooltool/requirement/interfaces.py:151
-msgid "Minimum"
-msgstr ""
-
-#: /src/schooltool/gradebook/browser/report_card.py:411
-msgid "Lowest integer score value possible"
-msgstr ""
-
-#: /src/schooltool/gradebook/browser/report_card.py:416
-#: /src/schooltool/requirement/browser/scoresystem.py:235
-#: /src/schooltool/requirement/interfaces.py:157
 msgid "Maximum"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:417
+#: /src/schooltool/gradebook/browser/report_card.py:575
 msgid "Highest integer score value possible"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report_card.py:485
+#: /src/schooltool/gradebook/browser/report_card.py:580
+#: /src/schooltool/requirement/browser/scoresystem.py:235
+#: /src/schooltool/requirement/interfaces.py:157
+msgid "Minimum"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/report_card.py:581
+msgid "Lowest integer score value possible"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/report_card.py:649
 msgid "Add new report activity"
 msgstr ""
 
