--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 2.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- recusion error in gradebook (https://launchpad.net/bugs/1052931)
 
 
 2.2.0 (2012-08-08)
