--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,11 @@
 CHANGES
 =======
 
-2.2.2 (unreleased)
+2.3.0 (2012-10-19)
 ------------------
 
-- Nothing changed yet.
+- Fix score history when first grade is unscored
+- Complete Dutch translation.
 
 
 2.2.1 (2012-10-09)
