--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,9 +2,10 @@
 CHANGES
 =======
 
-2.4a3 (unreleased)
+2.4b1 (2013-04-04)
 ------------------
 
+- Tab redirects to a section only if current user can access it (https://launchpad.net/bugs/1155226)
 - Added Thai translation
 
 
