Back to development: 2.4rc1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+2.4rc1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.4b1 (2013-04-04)
 ------------------
 
