--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,10 @@
 CHANGES
 =======
 
-2.4rc1 (unreleased)
--------------------
+2.4.0 (2013-04-18)
+------------------
 
-- Nothing changed yet.
+- Remove ``rwproperty`` dependency.
 
 
 2.4b1 (2013-04-04)
