--- a/src/schooltool/gradebook/locales/th.po
+++ b/src/schooltool/gradebook/locales/th.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: schooltool.gradebook\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-02-01 15:02-0500\n"
-"PO-Revision-Date: 2013-04-04 19:47+0200\n"
-"Last-Translator: mathinan <mathinan@jaansi.com>\n"
+"PO-Revision-Date: 2013-05-27 14:27+0000\n"
+"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: Thai <th@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-28 05:07+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-19 05:43+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
 
 #: /src/schooltool/gradebook/activity.py:52
 msgid "Sheet1"
