--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,9 +2,11 @@
 CHANGES
 =======
 
-2.4.1 (unreleased)
+2.4.1 (2013-05-30)
 ------------------
 
+- Made comment cells to submit the gradebook form
+- Warn about unsaved changes when leaving gradebook (https://launchpad.net/bugs/907999)
 - Updated translations, added Sinhalese.
 
 
