--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 2.5.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix report sheet links when a different school year is selected
 
 
 2.5.2 (2013-08-23)
